--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^3.14.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "global": "^4.4.0",
     "gsap": "^3.7.1",
     "mercadopago": "^1.5.8",
