--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.31.1",
     "react-sdk-mercadopago": "^1.1.1",
     "react-toastify": "^7.0.4",
+    "stripe": "^9.10.0",
     "styled-components": "^5.3.0",
     "yup": "^0.32.11"
   },
