--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "generate": "yarn plop --plopfile ./generators/plopfile.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.8.10",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@popperjs/core": "^2.11.0",
     "@prisma/client": "^3.14.0",
